# colorConverters

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt
lib/include/: Clamp.h  Converters.h  Datatypes.h
lib/src/: Converters.cpp
tests/: CMakeLists.txt  TestConverters.cpp  main.cpp
